# OC3D

./: .gitignore  CMakeLists.txt  Edge_Cut.h  Edge_Dual.h  Flow.h  IO_Tet.h  IO_Voxels.h  README  Search.h
examples/: CMakeLists.txt  OC3D_debug.cpp  ex_4genus.cpp
examples/Basic/: CMakeLists.txt  ex_2genus.cpp  ex_2genus_onepant.cpp  ex_4genus.cpp  ex_4genus_onepant.cpp
examples/Tore/: tore.1.ele  tore.1.face  tore.1.node  tore.1.off  tore.1.smesh  tore.blend  tore.off  tore_cut_0.cut  tore_cut_1.cut  tore_dual.off
examples/benchmark/Tore_opt/: tore_opt.blend  tore_opt_cut_0.cut
examples/benchmark/tore_opt_big/: tore_opt_big.blend  tore_opt_big_cut_0.cut
examples/benchmark/tore_opt_vbig/: tore_opt_vbig_cut_0.cut
examples/blender/: OC3D.py
examples/images/: CMakeLists.txt  imageCorrection.cpp
examples/images/data/: donut-double-pince.hdr  donut-double-pince.img  donut-double-pince.wrl  donut-double.hdr  donut-double.img  donut-double.wrl  torus-20.hdr  torus-20.img  torus-64.hdr  torus-64.img  torus.wrl
examples/verre/: verre.1.ele  verre.1.face  verre.1.node  verre.1.off  verre.1.smesh  verre.off  verre_cut_0.cut  verre_cut_1.cut  verre_cut_2.cut  verreapied.blend
report/: 3pant.eps  IO.eps  LFS.eps  Max_Flow_.eps  cutlocus.eps  cutlocus_skeleton.eps  demoauto.eps  demofirstBFS.eps  diagram_time.eps  edges.eps  ex_script_.eps  koch_snowflake.eps  mincut.eps  npant.eps  orientation.eps  report.aux  report.dvi  report.out  report.ps  report.tex  report.toc  sectionnoq.eps  sectionnoqzoom.eps  sectionq.eps  skeleton.eps  torus_star.eps  voxels.eps
src/: Edge_Cut.h  Edge_Dual.h  Flow.h  Ford_Neighborhood.h  IO_Base.h  IO_Tet.h  IO_Tet_Adj.h  IO_Tet_Seg.h  IO_Voxels.h  Neighborhood.h  OptimalNPants.h  Search.h  ShortestPaths.h  Structures.h
