

ADD_EXECUTABLE(ex_2genus ex_2genus.cpp)
TARGET_LINK_LIBRARIES(ex_2genus libtetmesh.a)

ADD_EXECUTABLE(ex_2genus_onepant ex_2genus_onepant.cpp)
TARGET_LINK_LIBRARIES(ex_2genus_onepant libtetmesh.a)

ADD_EXECUTABLE(ex_4genus ex_4genus.cpp)
TARGET_LINK_LIBRARIES(ex_4genus libtetmesh.a)

ADD_EXECUTABLE(ex_4genus_onepant ex_4genus_onepant.cpp)
TARGET_LINK_LIBRARIES(ex_4genus_onepant libtetmesh.a)
